--- a/content/Work.html
+++ b/content/Work.html
@@ -133,10 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Work.html'>Next</a> >> Work<br /><h1>About</h1>
-<h4>倉儲:<a href="https://github.com/40823245/cd2021">https://github.com/40823212/cd2021</a></h4>
-<h4>二人小組:40823212、40823236</h4>
-<br /> <a href='Work.html'>Next</a> >> Work</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>Work</h1>
+<br />About << <a href='About.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
         
     <!-- footer -->
       <div class="container">
