--- a/content/index.html
+++ b/content/index.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='Work.html'>Next</a> >> Work<br /><h1>About</h1>
 <h4>倉儲:<a href="https://github.com/40823245/cd2021">https://github.com/40823212/cd2021</a></h4>
-<h4>二人小組:40823212、40823236</h4><br /> </div>
+<h4>二人小組:40823212、40823236</h4>
+<br /> <a href='Work.html'>Next</a> >> Work</div>
         
     <!-- footer -->
       <div class="container">
