--- a/content/筆記.html
+++ b/content/筆記.html
@@ -133,8 +133,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">筆記 << <a href='筆記.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>Work</h1>
-<br />筆記 << <a href='筆記.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Work.html'>Next</a> >> Work<br /><h1>筆記</h1>
+<p>github更動導致檔案push不上去</p>
+<p><img alt="" height="128" src="./../images/10.png" width="1027"/></p>
+<p><img alt="" height="207" src="./../images/11.png" width="607"/></p>
+<p><span>在小黑窗打gitpull將遠端和近端整合</span></p>
+<p><span><img alt="" height="392" src="./../images/12.png" width="680"/></span></p><br />About << <a href='About.html'>Previous</a> <a href='Work.html'>Next</a> >> Work</div>
         
     <!-- footer -->
       <div class="container">
