--- a/content/w1-2.html
+++ b/content/w1-2.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='w1-1.html'>w1-1</a></li></ul><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1-2.html'>w1-2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Work << <a href='Work.html'>Previous</a> <br /><h1>w1</h1>
+    <div id="tipue_search_content">Work << <a href='Work.html'>Previous</a> <br /><h1>w1-2</h1>
 <p>Leo</p>
 <p>下載 kmol2021_spring_v1.7z 後解壓縮</p>
 <p><img alt="" height="266" src="./../images/2.png" width="600"/></p>
