--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -2,8 +2,11 @@
 <h4>倉儲:<a href="https://github.com/40823245/cd2021">https://github.com/40823212/cd2021</a></h4>
 <h4>二人小組:40823212、40823236</h4>
 <h1>筆記</h1>
-<p>檔案push不上去</p>
-<p></p><h1>Work</h1>
+<p>github更動導致檔案push不上去</p>
+<p><img alt="" height="128" src="/images/10.png" width="1027"/></p>
+<p><img alt="" height="207" src="/images/11.png" width="607"/></p>
+<p><span>在小黑窗打gitpull將遠端和近端整合</span></p>
+<p><span><img alt="" height="392" src="/images/12.png" width="680"/></span></p><h1>Work</h1>
 <h2>w1</h2>
 <p>Leo</p>
 <p>下載 kmol2021_spring_v1.7z 後解壓縮</p>
