--- a/content/Work.html
+++ b/content/Work.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='w1-1.html'>w1-1</a></li></ul><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1-2.html'>w1-2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">筆記 << <a href='筆記.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>Work</h1>
-<br />筆記 << <a href='筆記.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
+    <div id="tipue_search_content">筆記 << <a href='筆記.html'>Previous</a> <a href='w1-2.html'>Next</a> >> w1-2<br /><h1>Work</h1>
+<br />筆記 << <a href='筆記.html'>Previous</a> <a href='w1-2.html'>Next</a> >> w1-2</div>
         
     <!-- footer -->
       <div class="container">
