--- a/content/筆記.html
+++ b/content/筆記.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='w1-1.html'>w1-1</a></li></ul><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1-2.html'>w1-2</a></li>
+                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,12 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w1-1 << <a href='w1-1.html'>Previous</a> <a href='Work.html'>Next</a> >> Work<br /><h1>筆記</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Work.html'>Next</a> >> Work<br /><h1>筆記</h1>
 <p>github更動導致檔案push不上去</p>
 <p><img alt="" height="128" src="./../images/10.png" width="1027"/></p>
 <p><img alt="" height="207" src="./../images/11.png" width="607"/></p>
 <p><span>在小黑窗打gitpull將遠端和近端整合</span></p>
-<p><span><img alt="" height="392" src="./../images/12.png" width="680"/></span></p><br />w1-1 << <a href='w1-1.html'>Previous</a> <a href='Work.html'>Next</a> >> Work</div>
+<p><span><img alt="" height="392" src="./../images/12.png" width="680"/></span></p>
+<br />About << <a href='About.html'>Previous</a> <a href='Work.html'>Next</a> >> Work</div>
         
     <!-- footer -->
       <div class="container">
