--- a/content/w1 影片.html
+++ b/content/w1 影片.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='w1-1.html'>w1-1</a></li></ul><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='w1-2.html'>w1-2</a></li>
+                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">影片 << <a href='影片.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記<br /><h1>w1-1</h1>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/d577sjG-tDY" width="560"></iframe></p><br />影片 << <a href='影片.html'>Previous</a> <a href='筆記.html'>Next</a> >> 筆記</div>
+    <div id="tipue_search_content">w1 << <a href='w1.html'>Previous</a> <br /><h1>w1 影片</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/d577sjG-tDY" width="560"></iframe></p><br />w1 << <a href='w1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
