--- a/config/content.htm
+++ b/config/content.htm
@@ -30,3 +30,8 @@
 <p></p>
 <h3>w1 影片</h3>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/d577sjG-tDY" width="560"></iframe></p>
+<h1>小組</h1>
+<h2>w1 討論主題</h2>
+<p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
+<p><img alt="" height="700" src="/images/TEXE2.png" width="954"/></p>
+<p></p>
