--- a/content/小組.html
+++ b/content/小組.html
@@ -133,10 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='筆記.html'>Next</a> >> 筆記<br /><h1>About</h1>
-<h4>倉儲:<a href="https://github.com/40823245/cd2021">https://github.com/40823212/cd2021</a></h4>
-<h4>二人小組:40823212、40823236</h4>
-<br /> <a href='筆記.html'>Next</a> >> 筆記</div>
+    <div id="tipue_search_content">w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w1 討論主題.html'>Next</a> >> w1 討論主題<br /><h1>小組</h1>
+<br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w1 討論主題.html'>Next</a> >> w1 討論主題</div>
         
     <!-- footer -->
       <div class="container">
