--- a/content/w1 討論主題.html
+++ b/content/w1 討論主題.html
@@ -133,10 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='筆記.html'>Next</a> >> 筆記<br /><h1>About</h1>
-<h4>倉儲:<a href="https://github.com/40823245/cd2021">https://github.com/40823212/cd2021</a></h4>
-<h4>二人小組:40823212、40823236</h4>
-<br /> <a href='筆記.html'>Next</a> >> 筆記</div>
+    <div id="tipue_search_content">小組 << <a href='小組.html'>Previous</a> <br /><h1>w1 討論主題</h1>
+<p><img alt="" height="710" src="./../images/TEXE.png" width="956"/></p>
+<p><img alt="" height="700" src="./../images/TEXE2.png" width="954"/></p>
+<p></p><br />小組 << <a href='小組.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
