--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,7 +1,7 @@
 <h1>About</h1>
 <h4>倉儲:<a href="https://github.com/40823245/cd2021">https://github.com/40823212/cd2021</a></h4>
 <h4>二人小組:40823212、40823236</h4>
-<h1>筆記</h1>
+<p>gitter:https://gitter.im/cd2021bg7/community#</p><h1>筆記</h1>
 <p>github更動導致檔案push不上去</p>
 <p><img alt="" height="128" src="/images/10.png" width="1027"/></p>
 <p><img alt="" height="207" src="/images/11.png" width="607"/></p>
@@ -31,4 +31,7 @@
 <h3>w1 影片</h3>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/d577sjG-tDY" width="560"></iframe></p>
 <h1>小組</h1>
-<h2>w1</h2>
+<h2>w1 討論主題</h2>
+<p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
+<p><img alt="" height="700" src="/images/TEXE2.png" width="954"/></p>
+<p></p>
