--- a/content/w2零件繪製.html
+++ b/content/w2零件繪製.html
@@ -133,10 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">小組 << <a href='小組.html'>Previous</a> <br /><h1>w1 討論主題</h1>
-<p><img alt="" height="710" src="./../images/TEXE.png" width="956"/></p>
-<p><img alt="" height="700" src="./../images/TEXE2.png" width="954"/></p>
-<p></p><br />小組 << <a href='小組.html'>Previous</a> </div>
+    <div id="tipue_search_content">w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片<br /><h1>w2零件繪製</h1>
+<p><a href="./../downloads/主體.STL">零件1:主體</a></p>
+<br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片</div>
         
     <!-- footer -->
       <div class="container">
