--- a/content/About.html
+++ b/content/About.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li></li></ul></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a></li>
+                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li></ul><li class='has-children'><a href='w2零件繪製.html'>w2零件繪製</a><ul class='dropdown'><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a></li></li></ul></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a></li>
                       </ul>
                 </nav>
               </div>
@@ -136,7 +136,8 @@ img.add_border {
     <div id="tipue_search_content"> <a href='筆記.html'>Next</a> >> 筆記<br /><h1>About</h1>
 <h4>倉儲:<a href="https://github.com/40823245/cd2021">https://github.com/40823212/cd2021</a></h4>
 <h4>二人小組:40823212、40823236</h4>
-<p>gitter:<a href="https://gitter.im/cd2021bg7/community">https://gitter.im/cd2021bg7/community#</a></p><br /> <a href='筆記.html'>Next</a> >> 筆記</div>
+<p>gitter:<a href="https://gitter.im/cd2021bg7/community">https://gitter.im/cd2021bg7/community#</a></p>
+<br /> <a href='筆記.html'>Next</a> >> 筆記</div>
         
     <!-- footer -->
       <div class="container">
