--- a/content/w2零件繪製影片.html
+++ b/content/w2零件繪製影片.html
@@ -133,10 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">小組 << <a href='小組.html'>Previous</a> <br /><h1>w1 討論主題</h1>
-<p><img alt="" height="710" src="./../images/TEXE.png" width="956"/></p>
-<p><img alt="" height="700" src="./../images/TEXE2.png" width="954"/></p>
-<p></p><br />小組 << <a href='小組.html'>Previous</a> </div>
+    <div id="tipue_search_content">w2零件繪製 << <a href='w2零件繪製.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組<br /><h1>w2零件繪製影片</h1>
+<p><strong>零件1:主體</strong></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fvMX1GScPn0" width="560"></iframe></p>
+<p></p>
+<br />w2零件繪製 << <a href='w2零件繪製.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
       <div class="container">
