--- a/content/About.html
+++ b/content/About.html
@@ -137,7 +137,7 @@ img.add_border {
 <h4>倉儲:<a href="https://github.com/40823245/cd2021">https://github.com/40823212/cd2021</a></h4>
 <h4>二人小組:40823212、40823236</h4>
 <p>gitter:<a href="https://gitter.im/cd2021bg7/community">https://gitter.im/cd2021bg7/community#</a></p>
-<p>123456</p><br /> <a href='筆記.html'>Next</a> >> 筆記</div>
+<p>123456789</p><br /> <a href='筆記.html'>Next</a> >> 筆記</div>
         
     <!-- footer -->
       <div class="container">
