--- a/config/content.htm
+++ b/config/content.htm
@@ -2,7 +2,8 @@
 <h4>倉儲:<a href="https://github.com/40823245/cd2021">https://github.com/40823212/cd2021</a></h4>
 <h4>二人小組:40823212、40823236</h4>
 <p>gitter:<a href="https://gitter.im/cd2021bg7/community">https://gitter.im/cd2021bg7/community#</a></p>
-<p>12345678910</p><h1>筆記</h1>
+<p>12345678910</p>
+<h1>筆記</h1>
 <p>github更動導致檔案push不上去</p>
 <p><img alt="" height="128" src="/images/10.png" width="1027"/></p>
 <p><img alt="" height="207" src="/images/11.png" width="607"/></p>
@@ -34,7 +35,7 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/d577sjG-tDY" width="560"></iframe></p>
 <h2>w2零件繪製</h2>
 <p><a href="/downloads/主體.STL">零件1:主體</a></p>
-<h3>w2零件繪製影片</h3>
+<p><a href="/downloads/上蓋.STL">零件2:上蓋</a></p><h3>w2零件繪製影片</h3>
 <p><strong>零件1:主體</strong></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fvMX1GScPn0" width="560"></iframe></p>
 <p></p>
