--- a/content/w2零件繪製.html
+++ b/content/w2零件繪製.html
@@ -135,7 +135,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片<br /><h1>w2零件繪製</h1>
 <p><a href="./../downloads/主體.STL">零件1:主體</a></p>
-<br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片</div>
+<p><a href="./../downloads/上蓋.STL">零件2:上蓋</a></p><br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片</div>
         
     <!-- footer -->
       <div class="container">
