--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -35,8 +35,7 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/d577sjG-tDY" width="560"></iframe></p>
 <h2>w2零件繪製</h2>
 <p><a href="/downloads/主體.STL">零件1:主體</a></p>
-<p>零件2:上蓋</p>
-<h3>w2零件繪製影片</h3>
+<p><a href="/downloads/上蓋.STL">零件2:上蓋</a></p><h3>w2零件繪製影片</h3>
 <p><strong>零件1:主體</strong></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fvMX1GScPn0" width="560"></iframe></p>
 <p></p>
