--- a/content/w2零件繪製影片.html
+++ b/content/w2零件繪製影片.html
@@ -135,9 +135,11 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w2零件繪製 << <a href='w2零件繪製.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組<br /><h1>w2零件繪製影片</h1>
 <p><strong>零件1:主體</strong></p>
+<p><strong></strong></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fvMX1GScPn0" width="560"></iframe></p>
+<p>零件2:上蓋</p>
 <p></p>
-<br />w2零件繪製 << <a href='w2零件繪製.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6sUvll0LAXY" width="560"></iframe></p><br />w2零件繪製 << <a href='w2零件繪製.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
       <div class="container">
