--- a/content/w2零件繪製.html
+++ b/content/w2零件繪製.html
@@ -138,7 +138,8 @@ img.add_border {
 <p><img alt="" height="316" src="./../images/零件1.png" width="501"/></p>
 <p><a href="./../downloads/上蓋.STL">零件2:上蓋</a></p>
 <p><img alt="" height="315" src="./../images/零件2.png" width="501"/></p>
-<p><a href="./../downloads/齒盤.STL">零件3:齒盤</a></p><br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片</div>
+<p><a href="./../downloads/齒盤.STL">零件3:齒盤</a></p>
+<p><img alt="" height="195" src="./../images/齒盤.png" width="501"/></p><br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片</div>
         
     <!-- footer -->
       <div class="container">
