--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -38,7 +38,8 @@
 <p><img alt="" height="316" src="/images/零件1.png" width="501"/></p>
 <p><a href="/downloads/上蓋.STL">零件2:上蓋</a></p>
 <p><img alt="" height="315" src="/images/零件2.png" width="501"/></p>
-<p><a href="/downloads/齒盤.STL">零件3:齒盤</a></p><h3>w2零件繪製影片</h3>
+<p><a href="/downloads/齒盤.STL">零件3:齒盤</a></p>
+<p><img alt="" height="195" src="/images/齒盤.png" width="501"/></p><h3>w2零件繪製影片</h3>
 <p><strong>零件1:主體</strong></p>
 <p><strong></strong></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fvMX1GScPn0" width="560"></iframe></p>
