--- a/content/w2零件繪製影片.html
+++ b/content/w2零件繪製影片.html
@@ -139,6 +139,9 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fvMX1GScPn0" width="560"></iframe></p>
 <p>零件2:上蓋</p>
 <p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6sUvll0LAXY" width="560"></iframe></p>
+<p>零件3:齒盤</p>
+<p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6sUvll0LAXY" width="560"></iframe></p><br />w2零件繪製 << <a href='w2零件繪製.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
