--- a/config/content.htm
+++ b/config/content.htm
@@ -41,7 +41,9 @@
 <p><a href="/downloads/齒盤.STL">零件3:齒盤</a></p>
 <p><img alt="" height="195" src="/images/齒盤.png" width="501"/></p>
 <p><a href="/downloads/斜齒輪.STL">零件4:斜齒輪</a></p>
-<p><img alt="" height="171" src="/images/零件4.png" width="501"/></p><h3>w2零件繪製影片</h3>
+<p><img alt="" height="171" src="/images/零件4.png" width="501"/></p>
+<p><a href="/downloads/夾頭.STL">零件5:夾頭</a></p>
+<p><img alt="" height="198" src="/images/夾頭1.png" width="501"/></p><h3>w2零件繪製影片</h3>
 <p><strong>零件1:主體</strong></p>
 <p><strong></strong></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fvMX1GScPn0" width="560"></iframe></p>
