--- a/content/w2零件繪製.html
+++ b/content/w2零件繪製.html
@@ -141,7 +141,9 @@ img.add_border {
 <p><a href="./../downloads/齒盤.STL">零件3:齒盤</a></p>
 <p><img alt="" height="195" src="./../images/齒盤.png" width="501"/></p>
 <p><a href="./../downloads/斜齒輪.STL">零件4:斜齒輪</a></p>
-<p><img alt="" height="171" src="./../images/零件4.png" width="501"/></p><br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片</div>
+<p><img alt="" height="171" src="./../images/零件4.png" width="501"/></p>
+<p><a href="./../downloads/夾頭.STL">零件5:夾頭</a></p>
+<p><img alt="" height="198" src="./../images/夾頭1.png" width="501"/></p><br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片</div>
         
     <!-- footer -->
       <div class="container">
