--- a/content/w2零件繪製影片.html
+++ b/content/w2零件繪製影片.html
@@ -146,7 +146,7 @@ img.add_border {
 <p>零件4:斜齒輪</p>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/De6rLLFWi1s" width="560"></iframe></p>
-<p>零件5:夾頭</p>
+<p>零件5:夾頭底座</p>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nTWM9cVNZTI" width="560"></iframe></p><br />w2零件繪製 << <a href='w2零件繪製.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
