--- a/config/content.htm
+++ b/config/content.htm
@@ -42,7 +42,7 @@
 <p><img alt="" height="195" src="/images/齒盤.png" width="501"/></p>
 <p><a href="/downloads/斜齒輪.STL">零件4:斜齒輪</a></p>
 <p><img alt="" height="171" src="/images/零件4.png" width="501"/></p>
-<p><a href="/downloads/夾頭.STL">零件5:夾頭</a></p>
+<p><a href="/downloads/夾頭.STL">零件5:夾頭底座</a></p>
 <p><img alt="" height="198" src="/images/夾頭1.png" width="501"/></p><h3>w2零件繪製影片</h3>
 <p><strong>零件1:主體</strong></p>
 <p><strong></strong></p>
@@ -56,7 +56,7 @@
 <p>零件4:斜齒輪</p>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/De6rLLFWi1s" width="560"></iframe></p>
-<p>零件5:夾頭</p>
+<p>零件5:夾頭底座</p>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nTWM9cVNZTI" width="560"></iframe></p><h1>小組</h1>
 <h2>w1 討論主題</h2>
