--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -46,7 +46,8 @@
 <p><img alt="" height="198" src="/images/夾頭1.png" width="501"/></p>
 <p><a href="/downloads/6夾頭.STL">零件6:夾頭</a></p>
 <p><img alt="" height="350" src="/images/6夾頭.png" width="501"/></p>
-<p></p><h3>w2零件繪製影片</h3>
+<p></p>
+<h3>w2零件繪製影片</h3>
 <p><strong>零件1:主體</strong></p>
 <p><strong></strong></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fvMX1GScPn0" width="560"></iframe></p>
@@ -61,8 +62,11 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/De6rLLFWi1s" width="560"></iframe></p>
 <p>零件5:夾頭底座</p>
 <p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nTWM9cVNZTI" width="560"></iframe></p><h1>小組</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nTWM9cVNZTI" width="560"></iframe></p>
+<h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
 <p><img alt="" height="700" src="/images/TEXE2.png" width="954"/></p>
+<h2>w2 零件繪製討論</h2>
+<p><img alt="" height="603" src="/images/w2.png" width="954"/></p>
 <p></p>
