--- a/content/w1 討論主題.html
+++ b/content/w1 討論主題.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li></ul><li class='has-children'><a href='w2零件繪製.html'>w2零件繪製</a><ul class='dropdown'><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a></li></li></ul></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a></li>
+                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li></ul><li class='has-children'><a href='w2零件繪製.html'>w2零件繪製</a><ul class='dropdown'><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a></li></li></ul></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,10 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">小組 << <a href='小組.html'>Previous</a> <br /><h1>w1 討論主題</h1>
+    <div id="tipue_search_content">小組 << <a href='小組.html'>Previous</a> <a href='w2 零件繪製討論.html'>Next</a> >> w2 零件繪製討論<br /><h1>w1 討論主題</h1>
 <p><img alt="" height="710" src="./../images/TEXE.png" width="956"/></p>
 <p><img alt="" height="700" src="./../images/TEXE2.png" width="954"/></p>
-<p></p><br />小組 << <a href='小組.html'>Previous</a> </div>
+<br />小組 << <a href='小組.html'>Previous</a> <a href='w2 零件繪製討論.html'>Next</a> >> w2 零件繪製討論</div>
         
     <!-- footer -->
       <div class="container">
