--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -46,8 +46,9 @@
 <p><img alt="" height="198" src="/images/夾頭1.png" width="501"/></p>
 <p><a href="/downloads/6夾頭.STL">零件6:夾頭</a></p>
 <p><img alt="" height="350" src="/images/6夾頭.png" width="501"/></p>
-<p></p>
-<h3>w2零件繪製影片</h3>
+<p><a href="/downloads/套圈.STL">零件7:套圈</a></p>
+<p><img alt="" height="178" src="/images/套圈 2021-03-15 225545.png" width="501"/></p>
+<p></p><h3>w2零件繪製影片</h3>
 <p><strong>零件1:主體</strong></p>
 <p><strong></strong></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fvMX1GScPn0" width="560"></iframe></p>
