--- a/config/content.htm
+++ b/config/content.htm
@@ -48,6 +48,9 @@
 <p><img alt="" height="350" src="/images/6夾頭.png" width="501"/></p>
 <p><a href="/downloads/套圈.STL">零件7:套圈</a></p>
 <p><img alt="" height="178" src="/images/套圈 2021-03-15 225545.png" width="501"/></p>
+<p>三爪夾頭</p>
+<p><img alt="" height="190" src="/images/組合件1.png" width="501"/></p>
+<p><img alt="" height="195" src="/images/組合件2.png" width="501"/></p>
 <p></p><h3>w2零件繪製影片</h3>
 <p><strong>零件1:主體</strong></p>
 <p><strong></strong></p>
