--- a/content/w2零件繪製.html
+++ b/content/w2零件繪製.html
@@ -148,6 +148,9 @@ img.add_border {
 <p><img alt="" height="350" src="./../images/6夾頭.png" width="501"/></p>
 <p><a href="./../downloads/套圈.STL">零件7:套圈</a></p>
 <p><img alt="" height="178" src="./../images/套圈 2021-03-15 225545.png" width="501"/></p>
+<p>三爪夾頭</p>
+<p><img alt="" height="190" src="./../images/組合件1.png" width="501"/></p>
+<p><img alt="" height="195" src="./../images/組合件2.png" width="501"/></p>
 <p></p><br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片</div>
         
     <!-- footer -->
