--- a/content/w2零件繪製.html
+++ b/content/w2零件繪製.html
@@ -151,7 +151,8 @@ img.add_border {
 <p>三爪夾頭</p>
 <p><img alt="" height="190" src="./../images/組合件1.png" width="501"/></p>
 <p><img alt="" height="195" src="./../images/組合件2.png" width="501"/></p>
-<p></p><br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片</div>
+<p></p>
+<br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片</div>
         
     <!-- footer -->
       <div class="container">
