--- a/content/w2~w3零件繪製.html
+++ b/content/w2~w3零件繪製.html
@@ -133,23 +133,26 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w2~w3零件繪製 << <a href='w2~w3零件繪製.html'>Previous</a> <a href='w4網站影片.html'>Next</a> >> w4網站影片<br /><h1>w2零件繪製影片</h1>
-<p><strong>零件1:主體</strong></p>
-<p><strong></strong></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/fvMX1GScPn0" width="560"></iframe></p>
-<p>零件2:上蓋</p>
+    <div id="tipue_search_content">w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片<br /><h1>w2~w3零件繪製</h1>
+<p><a href="./../downloads/主體.STL">零件1:主體</a></p>
+<p><img alt="" height="316" src="./../images/零件1.png" width="501"/></p>
+<p><a href="./../downloads/上蓋.STL">零件2:上蓋</a></p>
+<p><img alt="" height="315" src="./../images/零件2.png" width="501"/></p>
+<p><a href="./../downloads/齒盤.STL">零件3:齒盤</a></p>
+<p><img alt="" height="195" src="./../images/齒盤.png" width="501"/></p>
+<p><a href="./../downloads/斜齒輪.STL">零件4:斜齒輪</a></p>
+<p><img alt="" height="171" src="./../images/零件4.png" width="501"/></p>
+<p><a href="./../downloads/夾頭.STL">零件5:夾頭底座</a></p>
+<p><img alt="" height="198" src="./../images/夾頭1.png" width="501"/></p>
+<p><a href="./../downloads/6夾頭.STL">零件6:夾頭</a></p>
+<p><img alt="" height="350" src="./../images/6夾頭.png" width="501"/></p>
+<p><a href="./../downloads/套圈.STL">零件7:套圈</a></p>
+<p><img alt="" height="178" src="./../images/套圈 2021-03-15 225545.png" width="501"/></p>
+<p>三爪夾頭</p>
+<p><img alt="" height="190" src="./../images/組合件1.png" width="501"/></p>
+<p><img alt="" height="195" src="./../images/組合件2.png" width="501"/></p>
 <p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6sUvll0LAXY" width="560"></iframe></p>
-<p>零件3:齒盤</p>
-<p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6sUvll0LAXY" width="560"></iframe></p>
-<p>零件4:斜齒輪</p>
-<p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/De6rLLFWi1s" width="560"></iframe></p>
-<p>零件5:夾頭底座</p>
-<p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/nTWM9cVNZTI" width="560"></iframe></p>
-<br />w2~w3零件繪製 << <a href='w2~w3零件繪製.html'>Previous</a> <a href='w4網站影片.html'>Next</a> >> w4網站影片</div>
+<br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片</div>
         
     <!-- footer -->
       <div class="container">
