--- a/content/w2~w3 BG1主題零件繪製.html
+++ b/content/w2~w3 BG1主題零件繪製.html
@@ -133,8 +133,26 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W5 BG2 主題 << <a href='W5 BG2 主題.html'>Previous</a> <a href='w1 討論主題.html'>Next</a> >> w1 討論主題<br /><h1>小組</h1>
-<br />W5 BG2 主題 << <a href='W5 BG2 主題.html'>Previous</a> <a href='w1 討論主題.html'>Next</a> >> w1 討論主題</div>
+    <div id="tipue_search_content">w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片<br /><h1>w2~w3 BG1主題零件繪製</h1>
+<p><a href="./../downloads/主體.STL">零件1:主體</a></p>
+<p><img alt="" height="316" src="./../images/零件1.png" width="501"/></p>
+<p><a href="./../downloads/上蓋.STL">零件2:上蓋</a></p>
+<p><img alt="" height="315" src="./../images/零件2.png" width="501"/></p>
+<p><a href="./../downloads/齒盤.STL">零件3:齒盤</a></p>
+<p><img alt="" height="195" src="./../images/齒盤.png" width="501"/></p>
+<p><a href="./../downloads/斜齒輪.STL">零件4:斜齒輪</a></p>
+<p><img alt="" height="171" src="./../images/零件4.png" width="501"/></p>
+<p><a href="./../downloads/夾頭.STL">零件5:夾頭底座</a></p>
+<p><img alt="" height="198" src="./../images/夾頭1.png" width="501"/></p>
+<p><a href="./../downloads/6夾頭.STL">零件6:夾頭</a></p>
+<p><img alt="" height="350" src="./../images/6夾頭.png" width="501"/></p>
+<p><a href="./../downloads/套圈.STL">零件7:套圈</a></p>
+<p><img alt="" height="178" src="./../images/套圈 2021-03-15 225545.png" width="501"/></p>
+<p>三爪夾頭</p>
+<p><img alt="" height="190" src="./../images/組合件1.png" width="501"/></p>
+<p><img alt="" height="195" src="./../images/組合件2.png" width="501"/></p>
+<p></p>
+<br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片</div>
         
     <!-- footer -->
       <div class="container">
