--- a/content/W5 BG2 主題.html
+++ b/content/W5 BG2 主題.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li></ul><li class='has-children'><a href='w2~w3零件繪製.html'>w2~w3零件繪製</a><ul class='dropdown'><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a></li></ul><li><a href='w4網站影片.html'>w4網站影片</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
+                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li></ul><li class='has-children'><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><ul class='dropdown'><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a></li></ul><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,26 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片<br /><h1>w2~w3零件繪製</h1>
-<p><a href="./../downloads/主體.STL">零件1:主體</a></p>
-<p><img alt="" height="316" src="./../images/零件1.png" width="501"/></p>
-<p><a href="./../downloads/上蓋.STL">零件2:上蓋</a></p>
-<p><img alt="" height="315" src="./../images/零件2.png" width="501"/></p>
-<p><a href="./../downloads/齒盤.STL">零件3:齒盤</a></p>
-<p><img alt="" height="195" src="./../images/齒盤.png" width="501"/></p>
-<p><a href="./../downloads/斜齒輪.STL">零件4:斜齒輪</a></p>
-<p><img alt="" height="171" src="./../images/零件4.png" width="501"/></p>
-<p><a href="./../downloads/夾頭.STL">零件5:夾頭底座</a></p>
-<p><img alt="" height="198" src="./../images/夾頭1.png" width="501"/></p>
-<p><a href="./../downloads/6夾頭.STL">零件6:夾頭</a></p>
-<p><img alt="" height="350" src="./../images/6夾頭.png" width="501"/></p>
-<p><a href="./../downloads/套圈.STL">零件7:套圈</a></p>
-<p><img alt="" height="178" src="./../images/套圈 2021-03-15 225545.png" width="501"/></p>
-<p>三爪夾頭</p>
-<p><img alt="" height="190" src="./../images/組合件1.png" width="501"/></p>
-<p><img alt="" height="195" src="./../images/組合件2.png" width="501"/></p>
-<p></p>
-<br />w1 影片 << <a href='w1 影片.html'>Previous</a> <a href='w2零件繪製影片.html'>Next</a> >> w2零件繪製影片</div>
+    <div id="tipue_search_content">w4網站影片 << <a href='w4網站影片.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組<br /><h1>W5 BG2 主題</h1>
+<p>蒸汽火車</p>
+<p>1.滑環</p>
+<p><img alt="" height="270" src="./../images/STEAM TRAIN.gif" width="597"/></p>
+<p></p><br />w4網站影片 << <a href='w4網站影片.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
       <div class="container">
