--- a/content/W5 BG2 主題.html
+++ b/content/W5 BG2 主題.html
@@ -135,7 +135,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w4網站影片 << <a href='w4網站影片.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組<br /><h1>W5 BG2 主題</h1>
 <p>蒸汽火車</p>
-<p>1.滑環</p>
+<p>1.滑環      2.區拐銷    3.<span>半徑桿</span></p>
+<p>4.<span>合併桿   </span>5.<span>十字頭    6.活塞閥  7.汽缸</span></p>
 <p><img alt="" height="270" src="./../images/STEAM TRAIN.gif" width="597"/></p>
 <p></p><br />w4網站影片 << <a href='w4網站影片.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
