--- a/content/w4網站影片.html
+++ b/content/w4網站影片.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li></ul><li class='has-children'><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><ul class='dropdown'><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a></li></ul><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a><li><a href='w6 bg2 零件.html'>w6 bg2 零件</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
+                     <li><a href='About.html'>About</a><li><a href='筆記.html'>筆記</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li class='has-children'><a href='w1.html'>w1</a><ul class='dropdown'><li><a href='w1 影片.html'>w1 影片</a></li></ul><li class='has-children'><a href='w2~w3 BG1主題零件繪製.html'>w2~w3 BG1主題零件繪製</a><ul class='dropdown'><li><a href='w2零件繪製影片.html'>w2零件繪製影片</a></li></ul><li><a href='w4網站影片.html'>w4網站影片</a><li><a href='W5 BG2 主題.html'>W5 BG2 主題</a><li><a href='w6 bg2 零件.html'>w6 bg2 零件</a></li></ul><li class='has-children'><a href='小組.html'>小組</a><ul class='dropdown'><li><a href='w1 討論主題.html'>w1 討論主題</a><li><a href='w2 零件繪製討論.html'>w2 零件繪製討論</a></li>
                       </ul>
                 </nav>
               </div>
