--- a/config/content.htm
+++ b/config/content.htm
@@ -86,6 +86,8 @@
 <p><img alt="" height="321" src="/images/螢幕擷取畫面 2021-04-16 145343.png" width="500"/></p>
 <p><a href="/downloads/p4.STL">零件4:搖臂連接桿</a></p>
 <p><img alt="" height="322" src="/images/螢幕擷取畫面 2021-04-16 150557.png" width="500"/></p>
+<p><a href="/downloads/p5.STL">零件5:十字頭連結桿</a></p>
+<p><img alt="" height="264" src="/images/螢幕擷取畫面 2021-04-16 161805.png" width="500"/></p>
 <p></p><h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
