--- a/content/w6~w7 bg2 零件.html
+++ b/content/w6~w7 bg2 零件.html
@@ -142,6 +142,8 @@ img.add_border {
 <p><img alt="" height="321" src="./../images/螢幕擷取畫面 2021-04-16 145343.png" width="500"/></p>
 <p><a href="./../downloads/p4.STL">零件4:搖臂連接桿</a></p>
 <p><img alt="" height="322" src="./../images/螢幕擷取畫面 2021-04-16 150557.png" width="500"/></p>
+<p><a href="./../downloads/p5.STL">零件5:十字頭連結桿</a></p>
+<p><img alt="" height="264" src="./../images/螢幕擷取畫面 2021-04-16 161805.png" width="500"/></p>
 <p></p><br />W5 BG2 主題 << <a href='W5 BG2 主題.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
