零件下載處

--- a/content/w6~w7 bg2 零件.html
+++ b/content/w6~w7 bg2 零件.html
@@ -144,6 +144,12 @@ img.add_border {
 <p><img alt="" height="322" src="./../images/螢幕擷取畫面 2021-04-16 150557.png" width="500"/></p>
 <p><a href="./../downloads/p5.STL">零件5:十字頭連結桿</a></p>
 <p><img alt="" height="264" src="./../images/螢幕擷取畫面 2021-04-16 161805.png" width="500"/></p>
+<p><a href="./../downloads/搖臂.STL">零件6:搖臂</a></p>
+<p><img alt="" height="188" src="./../images/螢幕擷取畫面 2021-04-19 221118.png" width="500"/></p>
+<p><a href="./../downloads/ㄑ字連接桿.STL">零件7:ㄑ字搖臂連接桿</a></p>
+<p><img alt="" height="187" src="./../images/螢幕擷取畫面 2021-04-19 221222.png" width="500"/></p>
+<p></p>
+<p></p>
 <p></p><br />W5 BG2 主題 << <a href='W5 BG2 主題.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
