--- a/content/w6~w7 bg2 零件.html
+++ b/content/w6~w7 bg2 零件.html
@@ -148,8 +148,12 @@ img.add_border {
 <p><img alt="" height="188" src="./../images/螢幕擷取畫面 2021-04-19 221118.png" width="500"/></p>
 <p><a href="./../downloads/ㄑ字連接桿.STL">零件7:ㄑ字搖臂連接桿</a></p>
 <p><img alt="" height="187" src="./../images/螢幕擷取畫面 2021-04-19 221222.png" width="500"/></p>
-<p></p>
-<p></p>
+<p><a href="./../downloads/ㄑ字搖桿.STL">零件8:ㄑ字搖桿</a></p>
+<p><img alt="" height="187" src="./../images/螢幕擷取畫面 2021-04-19 221427.png" width="500"/></p>
+<p><a href="./../downloads/活塞閥.STL">零件9:活塞閥</a></p>
+<p><img alt="" height="182" src="./../images/螢幕擷取畫面 2021-04-19 221528.png" width="500"/></p>
+<p><a href="./../downloads/上活塞.STL">零件10:上活塞</a></p>
+<p><img alt="" height="186" src="./../images/螢幕擷取畫面 2021-04-19 221915.png" width="500"/></p>
 <p></p><br />W5 BG2 主題 << <a href='W5 BG2 主題.html'>Previous</a> <a href='小組.html'>Next</a> >> 小組</div>
         
     <!-- footer -->
