--- a/config/content.htm
+++ b/config/content.htm
@@ -103,7 +103,9 @@
 <p><a href="/downloads/下活塞.STL">零件12:下活塞</a></p>
 <p><img alt="" height="188" src="/images/螢幕擷取畫面 2021-04-19 221656.png" width="500"/></p>
 <p><a href="/downloads/輪軸.STL">零件13:輪軸</a></p>
-<p><img alt="" height="187" src="/images/螢幕擷取畫面 2021-04-19 222049.png" width="500"/></p><h1>小組</h1>
+<p><img alt="" height="187" src="/images/螢幕擷取畫面 2021-04-19 222049.png" width="500"/></p>
+<p><a href="/downloads/火車主體.STL">零件14:火車主體</a></p>
+<p><img alt="" height="189" src="/images/螢幕擷取畫面 2021-04-19 222007.png" width="500"/></p><h1>小組</h1>
 <h2>w1 討論主題</h2>
 <p><img alt="" height="710" src="/images/TEXE.png" width="956"/></p>
 <p><img alt="" height="700" src="/images/TEXE2.png" width="954"/></p>
