--- a/content/index.html
+++ b/content/index.html
@@ -139,7 +139,8 @@ img.add_border {
 <p>gitter:<a href="https://gitter.im/cd2021bg7/community">https://gitter.im/cd2021bg7/community#</a></p>
 <p>四人小組:<a href="https://40823212.github.io/cd2021/content/index.html">40823212</a>、<a href="https://40823236.github.io/cd2021/content/index.html">40823236</a>、<a href="https://github.com/40823236/stage2-bg9">40823231</a>、<a href="https://40823219.github.io/cd2021/content/">40823219</a></p>
 <p><span>四人小組倉儲:</span><a href="https://github.com/40823236/stage2-bg9">https://github.com/40823236/stage2-bg9</a></p>
-<br /> <a href='筆記.html'>Next</a> >> 筆記</div>
+<p></p>
+<p>八人小組:<a href="https://40823212.github.io/cd2021/content/index.html">40823212</a><span>、</span><a href="https://40823236.github.io/cd2021/content/index.html">40823236</a><span>、</span><a href="https://github.com/40823236/stage2-bg9">40823231</a><span>、</span><a href="https://40823219.github.io/cd2021/content/">40823219</a></p><br /> <a href='筆記.html'>Next</a> >> 筆記</div>
         
     <!-- footer -->
       <div class="container">
